--- a/css/main.css
+++ b/css/main.css
@@ -684,7 +684,7 @@ textarea {
     height:166px;
     margin: 0px 0px;
     float: left;
-    background-image: url(../img/fusion2.jpg);
+    background-image: url(../img/Fusion2.jpg);
     background-repeat: no-repeat;
 }
 
