--- a/css/main.css
+++ b/css/main.css
@@ -663,7 +663,7 @@ textarea {
     margin: 20px 0px;
     float: left;
     margin-left: 20px;
-    background-image: url(../img/fusion2.jpg);
+    background-image: url(../img/Fusion2.jpg);
     background-repeat: no-repeat;
 }
 
